--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <a href="auto.html">auto</a>
                 <a href="business.html">business</a>
                 <a href="http://chaosworks.cn">混沌工厂</a>
-                <a href="file:///D:/web/links/index.html">本地links</a>
-
+                <a href="https://ianwinds.github.io/">git-links</a>
+                <a href="http://chaosworks.cn/links/">cw-links</a>
                 <a href="https://www.cndns.com/"><img src="./logo/" height="50" alt="">美橙</a>
                 邮箱：
                 <a href="https://mail.163.com/"><img src="./logo/" height="50" alt="">163</a>
